2022-December-29 Struan Robertson

		* gTransitionState.h/.cpp, Molecule.cpp: Implementation of transition state class
		revised so that imaginary frequency set at instantiation is not over written.

2022-December-28 Struan Robertson

		* gStructure: Add weighting to vector SRG vector.

		* Baseline update to relating the SRG vector change.

		* Update of VC16 project.

		* Update of installer script.

2022-November-21 Struan Robertson

		* DensityOfStates.h/.cpp, gDensityOfStates.h/.cpp and classes derived from 
		DensityOfStatesCalculator: Improved naming of thermodynamic contribution tables.

2022-November-20 Struan Robertson

		* DensityOfStates.h/.cpp, gDensityOfStates.h/.cpp, ThermodynamicTable.cpp and
		classes derived from DensityOfStatesCalculator: Implementation of thermodynamic
		function components table.

2022-November-14 Struan Robertson

		* MolecularComponent.h/.cpp and assocated files: More changes to improve
		"include" discipline.

		* DensityOfStates.h, BeyerSwinhart.cpp: Initial implementation of thermodynamic
		function components.

2022-November-13 Struan Robertson

		* MolecularComponent.h/.cpp and assocated files: Further changes to improve
		"include" discipline.

		* Documentation update.

2022-November-06 Struan Robertson

		* DensityOfStates.h/.cpp, System.cpp, ExponentialDown.cpp, BiExponetialDown.cpp,
		main.cpp, Rdouble.h, Morse.cpp, UnitTest.cpp, HinderedRotorUtils.cpp
		ThermodynamicTables.cpp: Include discipline changes.

2022-October-23 Struan Robertson

		* MesmerMaths.h/.cpp: Further fixes for Fourier coefficients with unevenly
		spaced data.

2022-September-07 Struan Robertson

		* MesmerMaths.cpp: Initial fix for Fourier coefficients with unevenly spaced
		data.

2022-August-21 Struan Robertson

		* CollisionOperator.cpp, MesmerEnv.h/.cpp, gWellTransition.h: Minor updates 
		related to radiation transitions.

		* Documentation update.

2022-May-29 Struan Robertson
